# platform.core.uifw.e-mod-tizen-keyrouter

./: Makefile.am  configure.ac  e-mod-tizen-keyrouter.pc.in
config/: key_combinations.ini
packaging/: e-mod-tizen-keyrouter.spec
protocol/: keyrouter-protocol.c  keyrouter-protocol.h  keyrouter.xml  wl_keyrouter.xml
scripts/: keygrab_status
src/: Makefile.am  e_mod_keyrouter_combination.c  e_mod_keyrouter_conf.c  e_mod_keyrouter_events.c  e_mod_keyrouter_ext.h  e_mod_keyrouter_list.c  e_mod_keyrouter_modkey.c  e_mod_keyrouter_util.c  e_mod_main.c  e_mod_main.h  e_mod_main_wl.c  e_mod_main_wl.h  ini.c  ini.h  streamline_annotate.h
