#maintainer-clean removes everything
MAINTAINERCLEANFILES = aclocal.m4 compile config.sub config.guess config.h.in \
		       configure depcomp install-sh ltmain.sh Makefile.in missing

SUBDIRS = src

EXTRA_DIST= e-mod-tizen-keyrouter.pc

pkgconfigdir = $(libdir)/pkgconfig

pkgconfig_DATA = e-mod-tizen-keyrouter.pc

MAINTAINERCLEANFILES = \
		       Makefile.in
